--- a/templates/mainpage/index.html
+++ b/templates/mainpage/index.html
@@ -15,8 +15,8 @@
 		    	{% csrf_token %}
 		    		<p id="lb_add_concept"></p>
 			        {{ add_concept_form.as_p }} 
-			        <input type="submit" value="Add Concept">
-			        <button type="button" class="btn_cancel" onclick="closeConceptForm()">Close</button>
+			        <button type="submit" class="create-choice-button">Add concept</button>
+			        <button type="button" class="del_button" onclick="closeConceptForm()">Close</button>
 		    </form>
 	</div>
 
@@ -24,8 +24,8 @@
 		    <form method=POST action="" class="form-container">
 		    	{% csrf_token %}
 			        {{ comment_form.as_p }} 
-			        <input type="submit" value="Add comment">
-			        <button type="button" class="btn_cancel" onclick="closeCommentForm()">Close</button>
+			        <button type="submit" class="create-choice-button">Add comment</button>
+			        <button type="button" class="del_button" onclick="closeCommentForm()">Close</button>
 		    </form>
 	</div>
 
@@ -33,8 +33,8 @@
 		    <form method=POST action="" class="form-container">
 		    	{% csrf_token %}
 			        {{ save_form.as_p }} 
-			        <input type="submit" value="Save">
-			        <button type="button" class="btn_cancel" onclick="closeSaveForm()">Close</button>
+			        <button type="submit" class="create-choice-button">Save</button>
+			        <button type="button" class="del_button" onclick="closeSaveForm()">Close</button>
 		    </form>
 	</div>
 
@@ -42,8 +42,8 @@
 		    <form method=POST action="" class="form-container" enctype="multipart/form-data">
 		    	{% csrf_token %}
 			        {{ open_form.as_p }} 
-			        <input type="submit" value="Open">
-			        <button type="button" class="btn_cancel" onclick="closeOpenForm()">Close</button>
+			        <button type="submit" class="create-choice-button">Open</button>
+			        <button type="button" class="del_button" onclick="closeOpenForm()">Close</button>
 		    </form>
 	</div>
 
@@ -52,8 +52,8 @@
 		    	{% csrf_token %}
 			        {{ delete_concept_form.as_p }} 
 			        <label>You definitely want to delete this Concept?</label><br>
-			        <input type="submit" value="Delete">
-			        <button type="button" class="btn_cancel" onclick="closeDelConceptForm()">Close</button>
+			        <button type="submit" class="create-choice-button">Delete</button>
+			        <button type="button" class="del_button" onclick="closeDelConceptForm()">Close</button>
 		    </form>
 	</div>
 
@@ -62,8 +62,8 @@
 		    	{% csrf_token %}
 			        {{ delete_ontology_form.as_p }} 
 			        <label>You definitely want to delete this ontology?</label><br>
-			        <input type="submit" value="Delete">
-			        <button type="button" class="btn_cancel" onclick="closeDelOntologyForm()">Close</button>
+			        <button type="submit" class="create-choice-button">Delete</button>
+			        <button type="button" class="del_button" onclick="closeDelOntologyForm()">Close</button>
 		    </form>
 	</div>
 
@@ -72,8 +72,8 @@
 		    	{% csrf_token %}
 			        {{ delete_concept_individual_form.as_p }} 
 			        <label>You definitely want to delete this individual?</label><br>
-			        <input type="submit" value="Delete">
-			        <button type="button" class="btn_cancel" onclick="closeDeleteConceptIndividual()">Close</button>
+			        <button type="submit" class="create-choice-button">Delete</button>
+			        <button type="button" class="del_button" onclick="closeDeleteConceptIndividual()">Close</button>
 		    </form>
 	</div>
 
@@ -82,8 +82,8 @@
 		    	{% csrf_token %}
 			        {{ delete_sub_concept_individual_form.as_p }} 
 			        <label>You definitely want to delete this individual?</label><br>
-			        <input type="submit" value="Delete">
-			        <button type="button" class="btn_cancel" onclick="closeDeleteSubConceptIndividual()">Close</button>
+			        <button type="submit" class="create-choice-button">Delete</button>
+			        <button type="button" class="del_button" onclick="closeDeleteSubConceptIndividual()">Close</button>
 		    </form>
 	</div>
 
@@ -92,8 +92,8 @@
 		    	{% csrf_token %}
 			        {{ delete_sub_sub_concept_individual_form.as_p }} 
 			        <label>You definitely want to delete this individual?</label><br>
-			        <input type="submit" value="Delete">
-			        <button type="button" class="btn_cancel" onclick="closeDeleteSubSubConceptIndividual()">Close</button>
+			        <button type="submit" class="create-choice-button">Delete</button>
+			        <button type="button" class="del_button" onclick="closeDeleteSubSubConceptIndividual()">Close</button>
 		    </form>
 	</div>
 
@@ -102,8 +102,8 @@
 		    	{% csrf_token %}
 			        {{ delete_subconcept_form.as_p }} 
 			        <label>You definitely want to delete this SubConcept?</label><br>
-			        <input type="submit" value="Delete">
-			        <button type="button" class="btn_cancel" onclick="closeDelSubConceptForm()">Close</button>
+			        <button type="submit" class="create-choice-button">Delete</button>
+			        <button type="button" class="del_button" onclick="closeDelSubConceptForm()">Close</button>
 		    </form>
 	</div>
 
@@ -112,8 +112,8 @@
 		    	{% csrf_token %}
 			        {{ delete_sub_subconcept_form.as_p }} 
 			        <label>You definitely want to delete this SubConcept?</label><br>
-			        <input type="submit" value="Delete">
-			        <button type="button" class="btn_cancel" onclick="closeDelSubSubConceptForm()">Close</button>
+			        <button type="submit" class="create-choice-button">Delete</button>
+			        <button type="button" class="del_button" onclick="closeDelSubSubConceptForm()">Close</button>
 		    </form>
 	</div>
 
@@ -122,8 +122,8 @@
 		    	{% csrf_token %}
 		    		<p id="lb_add_ind_or_sub"></p>
 			        {{ add_individual_or_sub_form.as_p }}
-			        <input type="submit" value="Add">
-			        <button type="button" class="btn_cancel" onclick="closeIndividualOrSubForm()">Close</button>
+			        <button type="submit" class="create-choice-button">Add</button>
+			        <button type="button" class="del_button" onclick="closeIndividualOrSubForm()">Close</button>
 		    </form>
 	</div>
 
@@ -132,8 +132,8 @@
 		    	{% csrf_token %}
 		    		<p id="lb_add_ind_or_sub_sub"></p>
 			        {{ add_individual_or_sub_sub_form.as_p }}
-			        <input type="submit" value="Add">
-			        <button type="button" class="btn_cancel" onclick="closeIndividualOrSubSubForm()">Close</button>
+			        <button type="submit" class="create-choice-button">Add</button>
+			        <button type="button" class="del_button" onclick="closeIndividualOrSubSubForm()">Close</button>
 		    </form>
 	</div>
 
@@ -142,8 +142,8 @@
 		    	{% csrf_token %}
 		    		<p id="lb_add_ind_for_sub_sub"></p>
 			        {{ add_individual_for_sub_sub_form.as_p }}
-			        <input type="submit" value="Add">
-			        <button type="button" class="btn_cancel" onclick="closeIndividualForSubSubForm()">Close</button>
+			        <button type="submit" class="create-choice-button">Add</button>
+			        <button type="button" class="del_button" onclick="closeIndividualForSubSubForm()">Close</button>
 		    </form>
 	</div>
 
@@ -152,8 +152,8 @@
 		    	{% csrf_token %}
 		    		<p id="lb_add_attr_for_con"></p>
 			        {{ add_attribute_con_form.as_p }}
-			        <input type="submit" value="Add">
-			        <button type="button" class="btn_cancel" onclick="closeAddConceptIndividualAttr()">Close</button>
+			        <button type="submit" class="create-choice-button">Add</button>
+			        <button type="button" class="del_button" onclick="closeAddConceptIndividualAttr()">Close</button>
 		    </form>
 	</div>
 
@@ -162,8 +162,8 @@
 		    	{% csrf_token %}
 		    		<p id="lb_add_attr_for_subcon"></p>
 			        {{ add_attribute_subcon_form.as_p }}
-			        <input type="submit" value="Add">
-			        <button type="button" class="btn_cancel" onclick="closeAddSubConceptIndividualAttr()">Close</button>
+			        <button type="submit" class="create-choice-button">Add</button>
+			        <button type="button" class="del_button" onclick="closeAddSubConceptIndividualAttr()">Close</button>
 		    </form>
 	</div>
 
@@ -172,8 +172,8 @@
 		    	{% csrf_token %}
 		    		<p id="lb_add_attr_for_subsubcon"></p>
 			        {{ add_attribute_subsubcon_form.as_p }}
-			        <input type="submit" value="Add">
-			        <button type="button" class="btn_cancel" onclick="closeAddSubSubConceptIndividualAttr()">Close</button>
+			        <button type="submit" class="create-choice-button">Add</button>
+			        <button type="button" class="del_button" onclick="closeAddSubSubConceptIndividualAttr()">Close</button>
 		    </form>
 	</div>
 
@@ -194,16 +194,16 @@
 	        </div>
 	    </form>
 
-    <input type="radio" name="inset" value="" id="tab_1" checked>
+    <input class="tab_input" type="radio" name="inset" value="" id="tab_1" checked>
     <label for="tab_1">Ontology</label>
 
-    <input type="radio" name="inset" value="" id="tab_2">
+    <input class="tab_input" type="radio" name="inset" value="" id="tab_2">
     <label for="tab_2">Attributes</label>
 
-    <input type="radio" name="inset" value="" id="tab_3">
+    <input class="tab_input" type="radio" name="inset" value="" id="tab_3">
     <label for="tab_3">Requests</label>
 
-    <input type="radio" name="inset" value="" id="tab_4">
+    <input class="tab_input" type="radio" name="inset" value="" id="tab_4">
     <label for="tab_4">Relations</label>
 
     <div id="txt_1">
